--- a/Prototype/Prototype/Prototype.csproj
+++ b/Prototype/Prototype/Prototype.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Forms\FactsForm.Designer.cs">
       <DependentUpon>FactsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\StopWordsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\StopWordsForm.Designer.cs">
+      <DependentUpon>StopWordsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaces\ILogWriter.cs" />
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
@@ -81,7 +87,6 @@
       <DependentUpon>ReviewForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Tools\OwlClassItem.cs" />
-    <Compile Include="Tools\TomitaParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\WriteInLog.cs" />
@@ -93,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\OntologyForm.resx">
       <DependentUpon>OntologyForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StopWordsForm.resx">
+      <DependentUpon>StopWordsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
