--- a/Prototype/Prototype/Prototype.csproj
+++ b/Prototype/Prototype/Prototype.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Forms\ConnectSqlServerForm.Designer.cs">
       <DependentUpon>ConnectSqlServerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ExportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ExportForm.Designer.cs">
+      <DependentUpon>ExportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FactsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,9 +103,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Review.cs" />
+    <Compile Include="Tools\SqlQuery.cs" />
     <Compile Include="Tools\WriteInLog.cs" />
     <EmbeddedResource Include="Forms\ConnectSqlServerForm.resx">
       <DependentUpon>ConnectSqlServerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ExportForm.resx">
+      <DependentUpon>ExportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FactsForm.resx">
       <DependentUpon>FactsForm.cs</DependentUpon>
