--- a/Prototype/Prototype/Prototype.csproj
+++ b/Prototype/Prototype/Prototype.csproj
@@ -55,72 +55,75 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\ConnectSqlServerForm.cs">
+    <Compile Include="Forms\Dialog\ConnectSqlServerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ConnectSqlServerForm.Designer.cs">
+    <Compile Include="Forms\Dialog\ConnectSqlServerForm.Designer.cs">
       <DependentUpon>ConnectSqlServerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ExportForm.cs">
+    <Compile Include="Forms\Dialog\ExportForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ExportForm.Designer.cs">
+    <Compile Include="Forms\Dialog\ExportForm.Designer.cs">
       <DependentUpon>ExportForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FactsForm.cs">
+    <Compile Include="Forms\Window\FactsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FactsForm.Designer.cs">
+    <Compile Include="Forms\Window\FactsForm.Designer.cs">
       <DependentUpon>FactsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\StopWordsForm.cs">
+    <Compile Include="Forms\Window\StopWordsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\StopWordsForm.Designer.cs">
+    <Compile Include="Forms\Window\StopWordsForm.Designer.cs">
       <DependentUpon>StopWordsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\ILogWriter.cs" />
-    <Compile Include="Forms\MainForm.cs">
+    <Compile Include="Forms\Window\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\MainForm.Designer.cs">
+    <Compile Include="Forms\Window\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\OntologyForm.cs">
+    <Compile Include="Forms\Window\OntologyForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\OntologyForm.Designer.cs">
+    <Compile Include="Forms\Window\OntologyForm.Designer.cs">
       <DependentUpon>OntologyForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ReviewForm.cs">
+    <Compile Include="Forms\Window\ReviewForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ReviewForm.Designer.cs">
+    <Compile Include="Forms\Window\ReviewForm.Designer.cs">
       <DependentUpon>ReviewForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Tools\Fact.cs" />
+    <Compile Include="Forms\Abstract\MasterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Tools\OwlClassItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Review.cs" />
     <Compile Include="Tools\SqlQuery.cs" />
     <Compile Include="Tools\WriteInLog.cs" />
-    <EmbeddedResource Include="Forms\ConnectSqlServerForm.resx">
+    <EmbeddedResource Include="Forms\Dialog\ConnectSqlServerForm.resx">
       <DependentUpon>ConnectSqlServerForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ExportForm.resx">
+    <EmbeddedResource Include="Forms\Dialog\ExportForm.resx">
       <DependentUpon>ExportForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FactsForm.resx">
+    <EmbeddedResource Include="Forms\Window\FactsForm.resx">
       <DependentUpon>FactsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\MainForm.resx">
+    <EmbeddedResource Include="Forms\Window\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\OntologyForm.resx">
+    <EmbeddedResource Include="Forms\Window\OntologyForm.resx">
       <DependentUpon>OntologyForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\StopWordsForm.resx">
+    <EmbeddedResource Include="Forms\Window\StopWordsForm.resx">
       <DependentUpon>StopWordsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -132,8 +135,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Forms\ReviewForm.resx">
+    <EmbeddedResource Include="Forms\Window\ReviewForm.resx">
       <DependentUpon>ReviewForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Abstract\MasterForm.resx">
+      <DependentUpon>MasterForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
